--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 :root{--bg:var(--tg-theme-bg-color,#0b0e14);--fg:var(--tg-theme-text-color,#eaf2ff);
     --muted:#9aa3ad;--border:rgba(255,255,255,.12);--glow:0 12px 40px rgba(91,140,255,.35)}
-  #inviteRewardsBtn{display:block;margin:24px 16px 0 auto;width:72px;height:72px;border-radius:16px;
+  #inviteRewardsBtn{display:block;margin:24px 16px 0 auto;width:90px;height:80px;border-radius:16px;
     object-fit:cover;cursor:pointer;border:1px solid var(--border);box-shadow:var(--glow);background:#0c1220}
   .invite-overlay{position:fixed;inset:0;z-index:9999;display:none;background:rgba(2,4,10,.55);
     backdrop-filter:blur(6px);padding:24px;overflow:auto}
@@ -1258,6 +1258,7 @@ canvas{ display:block }
         </div>
       </div>
     </div>
+<div>
 <!-- Launcher -->
 <img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Invite & Rewards"/>
 <!-- ===== Test Your Luck (scrolls with page) ===== -->
@@ -1265,7 +1266,7 @@ canvas{ display:block }
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
 </div>
-
+</div>
 
 
 
