--- a/index.html
+++ b/index.html
@@ -1258,15 +1258,14 @@ canvas{ display:block }
         </div>
       </div>
     </div>
-<div>
+
 <!-- Launcher -->
-<img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Invite & Rewards"/>
+<div><img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Invite & Rewards"/>
 <!-- ===== Test Your Luck (scrolls with page) ===== -->
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
-</div>
-</div>
+</div></div>
 
 
 
