--- a/index.html
+++ b/index.html
@@ -1104,8 +1104,9 @@ body{
 .avatars .item.sel{ outline:2px solid #4aa3ff; }
 
 /* Games common */
-.game-9x16{width:100%; aspect-ratio:9/16;  background: url("img/bluebackground.png") center / cover no-repeat #000;
-  border-radius:10px; background:linear-gradient(180deg,#0c0f12,#070a0d); border-radius:10px; position:relative; overflow:hidden; display:flex; align-items:center; justify-content:center; padding:8px}
+.game-9x16{width:100%; aspect-ratio:9/16;  background:
+    url("img/bluebackground.png") center / cover no-repeat,
+    linear-gradient(180deg, #0c0f12, #070a0d); border-radius:10px; position:relative; overflow:hidden; display:flex; align-items:center; justify-content:center; padding:8px}
 canvas{ display:block }
 
 /* Snake/Tetris grid helpers */
