--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ body{
 
 /* ORB */
 .orb{
-  width:94%; aspect-ratio:1/1; border-radius:50%; position:relative; z-index:40; cursor:pointer; transform: translateY(-1cm);
+  width:200%; aspect-ratio:1/1; border-radius:50%; position:relative; z-index:40; cursor:pointer; transform: translateY(-1cm);
   display:flex; align-items:center; justify-content:center; box-shadow:inset 0 -22px 70px rgba(0,0,0,0.52), 0 30px 100px rgba(0,0,0,0.64);
   background:radial-gradient(160% 140% at 50% 30%, #232325 0%, #0a0a0a 60%);
 }
@@ -1104,15 +1104,8 @@ body{
 .avatars .item.sel{ outline:2px solid #4aa3ff; }
 
 /* Games common */
-.game-9x16{width:100%; aspect-ratio:9/16; background:
-    url("/img/bluebackground.png") center / cover no-repeat,
-    linear-gradient(180deg,#0c0f12,#070a0d);
-  background-blend-mode: overlay;
- border-radius:10px; position:relative; overflow:hidden; display:flex; align-items:center; justify-content:center; padding:8px}
+.game-9x16{width:100%; aspect-ratio:9/16; background:linear-gradient(180deg,#0c0f12,#070a0d); border-radius:10px; position:relative; overflow:hidden; display:flex; align-items:center; justify-content:center; padding:8px}
 canvas{ display:block }
-#ttCanvas{
-  background: transparent !important; /* stop it from covering the wrapper */
-}
 
 /* Snake/Tetris grid helpers */
 .grid{ position:absolute; inset:0; display:grid; gap:2px; padding:8px;
