--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   height: 76px;
   flex: 0 0 auto;        /* don't let it stretch */
   /* If you want it at the far RIGHT edge of the row, uncomment next line: */
-  /* margin-left: auto; */   /* pushes this item to the right in flexbox */
+   margin-left: auto;   /* pushes this item to the right in flexbox */
 }
 
 .tt-pill{
