--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@ canvas{ display:block }
     </div>
 
 <!-- Launcher -->
-<div><button id="inviteRewardsBtn"> <img src="./img/getrewards.png" alt="Invite & Rewards"/></button>
+<div><img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Invite & Rewards"/>
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
