--- a/index.html
+++ b/index.html
@@ -1260,11 +1260,10 @@ canvas{ display:block }
     </div>
 
 <!-- Launcher -->
-<div><img id="inviteRewardsBtn" src="./img/getrewards.png" alt="Invite & Rewards"/>
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
-</div></div>
+</div>
 
 
 
