--- a/index.html
+++ b/index.html
@@ -1260,10 +1260,14 @@ canvas{ display:block }
     </div>
 
 <!-- Launcher -->
+<!-- Launcher (no timer element) -->
+<div><div id="inviteBtnWrap" class="luck-btn-wrap">
+  <img id="inviteBtnImg" class="luck-btn-img" src="img/getrewards.png" alt="Get rewards">
+</div>
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
-</div>
+</div></div>
 
 
 
